viz: Ensure first frame from FrameSinkVideoCapturer has metadata

Currently we send the default CompositorFrameMetadata with the first
VideoFrame. This makes inspecting a remote target in DevTools buggy
when viz is enabled.

Bug: 837362
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: Ie57e4bb290c1fa683839f7e5f09be1d5c2472b3a
Reviewed-on: https://chromium-review.googlesource.com/1035365
Commit-Queue: Saman Sami <samans@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555286}
Former-commit-id: 6f88ba7aae81b9dcba664ca79b265a9da7e87cb4